add pretty output

--- a/ai/ecommerce-reccomendation/apriori.ipynb
+++ b/ai/ecommerce-reccomendation/apriori.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 4,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 5,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 6,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 7,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -163,17 +163,17 @@
           "data": {
             "text/plain": [
               "[RelationRecord(items=frozenset({'1.0', '2.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'1.0'}), items_add=frozenset({'2.0'}), confidence=0.3333333333333333, lift=4.25), OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'1.0'}), confidence=0.5, lift=4.25)]),\n",
-              " RelationRecord(items=frozenset({'3.0', '1.0'}), support=0.09803921568627451, ordered_statistics=[OrderedStatistic(items_base=frozenset({'1.0'}), items_add=frozenset({'3.0'}), confidence=0.8333333333333334, lift=6.071428571428571), OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'1.0'}), confidence=0.7142857142857142, lift=6.07142857142857)]),\n",
+              " RelationRecord(items=frozenset({'1.0', '3.0'}), support=0.09803921568627451, ordered_statistics=[OrderedStatistic(items_base=frozenset({'1.0'}), items_add=frozenset({'3.0'}), confidence=0.8333333333333334, lift=6.071428571428571), OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'1.0'}), confidence=0.7142857142857142, lift=6.07142857142857)]),\n",
               " RelationRecord(items=frozenset({'1.0', '6.0'}), support=0.058823529411764705, ordered_statistics=[OrderedStatistic(items_base=frozenset({'1.0'}), items_add=frozenset({'6.0'}), confidence=0.5, lift=3.6428571428571423), OrderedStatistic(items_base=frozenset({'6.0'}), items_add=frozenset({'1.0'}), confidence=0.42857142857142855, lift=3.642857142857143)]),\n",
               " RelationRecord(items=frozenset({'3.0', '2.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'3.0'}), confidence=0.5, lift=3.6428571428571423), OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'2.0'}), confidence=0.2857142857142857, lift=3.642857142857143)]),\n",
-              " RelationRecord(items=frozenset({'2.0', '4.0'}), support=0.0196078431372549, ordered_statistics=[OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'4.0'}), confidence=0.25, lift=4.25), OrderedStatistic(items_base=frozenset({'4.0'}), items_add=frozenset({'2.0'}), confidence=0.3333333333333333, lift=4.25)]),\n",
-              " RelationRecord(items=frozenset({'2.0', '6.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'6.0'}), confidence=0.5, lift=3.6428571428571423), OrderedStatistic(items_base=frozenset({'6.0'}), items_add=frozenset({'2.0'}), confidence=0.2857142857142857, lift=3.642857142857143)]),\n",
-              " RelationRecord(items=frozenset({'3.0', '4.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'4.0'}), confidence=0.2857142857142857, lift=4.857142857142857), OrderedStatistic(items_base=frozenset({'4.0'}), items_add=frozenset({'3.0'}), confidence=0.6666666666666666, lift=4.857142857142857)]),\n",
+              " RelationRecord(items=frozenset({'4.0', '2.0'}), support=0.0196078431372549, ordered_statistics=[OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'4.0'}), confidence=0.25, lift=4.25), OrderedStatistic(items_base=frozenset({'4.0'}), items_add=frozenset({'2.0'}), confidence=0.3333333333333333, lift=4.25)]),\n",
+              " RelationRecord(items=frozenset({'6.0', '2.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'2.0'}), items_add=frozenset({'6.0'}), confidence=0.5, lift=3.6428571428571423), OrderedStatistic(items_base=frozenset({'6.0'}), items_add=frozenset({'2.0'}), confidence=0.2857142857142857, lift=3.642857142857143)]),\n",
+              " RelationRecord(items=frozenset({'4.0', '3.0'}), support=0.0392156862745098, ordered_statistics=[OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'4.0'}), confidence=0.2857142857142857, lift=4.857142857142857), OrderedStatistic(items_base=frozenset({'4.0'}), items_add=frozenset({'3.0'}), confidence=0.6666666666666666, lift=4.857142857142857)]),\n",
               " RelationRecord(items=frozenset({'3.0', '6.0'}), support=0.0784313725490196, ordered_statistics=[OrderedStatistic(items_base=frozenset({'3.0'}), items_add=frozenset({'6.0'}), confidence=0.5714285714285714, lift=4.163265306122448), OrderedStatistic(items_base=frozenset({'6.0'}), items_add=frozenset({'3.0'}), confidence=0.5714285714285714, lift=4.163265306122448)]),\n",
               " RelationRecord(items=frozenset({'4.0', '6.0'}), support=0.058823529411764705, ordered_statistics=[OrderedStatistic(items_base=frozenset({'4.0'}), items_add=frozenset({'6.0'}), confidence=1.0, lift=7.285714285714285), OrderedStatistic(items_base=frozenset({'6.0'}), items_add=frozenset({'4.0'}), confidence=0.42857142857142855, lift=7.285714285714286)])]"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 9,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -353,7 +353,7 @@
               "8            4.0             6.0  0.058824    1.000000  7.285714"
             ]
           },
-          "execution_count": 73,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -503,13 +503,88 @@
               "5            2.0             6.0  0.039216    0.500000  3.642857"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "resultsinDataFrame.nlargest(n = 10, columns = 'Lift')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'item1': '1.0',\n",
+              "  'item2': '2.0',\n",
+              "  'support': 0.0392156862745098,\n",
+              "  'confidence': 0.3333333333333333,\n",
+              "  'lift': 4.25},\n",
+              " {'item1': '1.0',\n",
+              "  'item2': '3.0',\n",
+              "  'support': 0.09803921568627451,\n",
+              "  'confidence': 0.8333333333333334,\n",
+              "  'lift': 6.071428571428571},\n",
+              " {'item1': '1.0',\n",
+              "  'item2': '6.0',\n",
+              "  'support': 0.058823529411764705,\n",
+              "  'confidence': 0.5,\n",
+              "  'lift': 3.6428571428571423},\n",
+              " {'item1': '2.0',\n",
+              "  'item2': '3.0',\n",
+              "  'support': 0.0392156862745098,\n",
+              "  'confidence': 0.5,\n",
+              "  'lift': 3.6428571428571423},\n",
+              " {'item1': '2.0',\n",
+              "  'item2': '4.0',\n",
+              "  'support': 0.0196078431372549,\n",
+              "  'confidence': 0.25,\n",
+              "  'lift': 4.25},\n",
+              " {'item1': '2.0',\n",
+              "  'item2': '6.0',\n",
+              "  'support': 0.0392156862745098,\n",
+              "  'confidence': 0.5,\n",
+              "  'lift': 3.6428571428571423},\n",
+              " {'item1': '3.0',\n",
+              "  'item2': '4.0',\n",
+              "  'support': 0.0392156862745098,\n",
+              "  'confidence': 0.2857142857142857,\n",
+              "  'lift': 4.857142857142857},\n",
+              " {'item1': '3.0',\n",
+              "  'item2': '6.0',\n",
+              "  'support': 0.0784313725490196,\n",
+              "  'confidence': 0.5714285714285714,\n",
+              "  'lift': 4.163265306122448},\n",
+              " {'item1': '4.0',\n",
+              "  'item2': '6.0',\n",
+              "  'support': 0.058823529411764705,\n",
+              "  'confidence': 1.0,\n",
+              "  'lift': 7.285714285714285}]"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pretty = []\n",
+        "\n",
+        "for row in np.array(resultsinDataFrame):\n",
+        "    pretty.append({\n",
+        "        'item1': row[0],\n",
+        "        'item2': row[1],\n",
+        "        'support': row[2],\n",
+        "        'confidence': row[3],\n",
+        "        'lift': row[4],\n",
+        "    })\n",
+        "\n",
+        "pretty\n"
       ]
     }
   ],
